--- a/app/assets/styles/modules/_large-hero.css
+++ b/app/assets/styles/modules/_large-hero.css
@@ -1,4 +1,37 @@
 .large-hero{
     color: purple;
     position: relative;
+
+    &__text-content{position: absolute;
+        top: 50%;
+        transform: translateY(-50%);
+        left: 0;
+        width: 100%;
+        text-align: center;
+
+    }
+
+    &__title{
+        font-size: 4.8rem;
+        font-weight: 300;
+        color:#2f5572;
+        margin: 0;
+    }
+
+    &__subtitle{
+        font-size: 2.9rem;
+        font-weight: 300;
+        color:#2f5572;
+        margin: 0;
+    }
+    &__description{
+        color:white;
+        font-size: 1.875rem;
+        font-weight: 100;
+        text-shadow:2px 2px rgba(0 0 0 0, 1.0);
+        max-width: 30rem;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    
 }
