--- a/app/assets/styles/modules/_large-hero.css
+++ b/app/assets/styles/modules/_large-hero.css
@@ -12,17 +12,25 @@
     }
 
     &__title{
-        font-size: 4.8rem;
+        font-size: 1.1rem;
         font-weight: 300;
         color:#2f5572;
         margin: 0;
+
+        @mixin atSmall{
+            font-size: 4.8rem;}
+            
+        
     }
 
     &__subtitle{
-        font-size: 2.9rem;
+        font-size: .9rem;
         font-weight: 300;
         color:#2f5572;
         margin: 0;
+
+        @mixin atSmall{
+            font-size: 2.9rem;}
     }
     &__description{
         color:white;
