--- a/app/assets/styles/modules/_large-hero.css
+++ b/app/assets/styles/modules/_large-hero.css
@@ -18,8 +18,14 @@
         margin: 0;
 
         @mixin atSmall{
-            font-size: 4.8rem;}
+            font-size: 2rem;}
+        @mixin atMedium {
+            font-size: 3rem;
+              } 
+        @mixin atLarge {
+            font-size: 4.8rem;
             
+        }
         
     }
 
