--- a/app/assets/styles/base/_global.css
+++ b/app/assets/styles/base/_global.css
@@ -1,14 +1,17 @@
-body{
-    font-family: 'Roboto','sans-sarif';
+body {
+    font-family: 'Roboto', sans-serif;
     color: #333;
-}
-img {
-    max-width:100%;
+  }
+  
+  img {
+    max-width: 100%;
     height: auto;
-}
-$mainBlue: #312754;
-.large-hero{
-    h2{
-        color: $mainBlue;
-    }
-}
+  }
+  
+  * {
+    box-sizing: border-box;
+  }
+  
+  a {
+    color: $mainOrange;
+  }
