Updated our feature section

--- a/app/assets/styles/modules/_row.css
+++ b/app/assets/styles/modules/_row.css
@@ -9,6 +9,12 @@
     &--gutters > div {
       padding-right: 65px;
     }
+    &--gutters-large {
+      margin-right: -100px;
+    }
+    &--gutters-large > div {
+      padding-right: 100px;
+    }
   
     &__b-margin-until-medium {
       margin-bottom: 1rem;
@@ -19,7 +25,10 @@
       &__b-margin-until-medium {
         margin-bottom: 0;
       }
-  
+  &__medium-6{
+    float: left;
+    width: 50%;
+  }
       &__medium-4 {
         float: left;
         width: 33.33%;
@@ -39,5 +48,9 @@
       }
     }
     
+    &__mid-content{
+      margin-left: auto;
+      margin-right: auto;
+    }
   
   }
